# roadmap-learner-api

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2025_11_06_2021-0889dbe971b7_init.py  2025_11_07_1243-dff413feeb4d_initial.py  2025_11_07_1345-8c7750155fb0_users_and_roadmaps_tables.py  2025_11_07_1427-353de4cbf98b_sessions_table.py  2025_11_10_1617-3643046ad461_upd_user_table.py  2025_11_10_1727-5fcbe25ded91_create_access_tokens.py
app/: main.py
app/actions/: create_user.py
app/alembic/: env.py
app/alembic/versions/: 2025_11_07_1345-8c7750155fb0_users_and_roadmaps_tables.py  2025_11_07_1405-2bf2ef7ffead_blocks_cards_tables.py  2025_11_07_1427-353de4cbf98b_sessions_table.py  2025_11_10_1617-3643046ad461_upd_user_table.py  (+7 more)
app/api/: __init__.py
app/core/: config.py  custom_types.py  dependencies.py  handlers.py  logging.py  security.py  types.py
app/db/: interface.py
app/models/: __init__.py  access_token.py  base.py  block.py  card.py  db_helper.py  mixins.py  roadmap.py  session.py  session_manager.py  user.py
app/repositories/: __init__.py  base.py  block.py  card.py  roadmap.py  session.py  session_manager.py  user.py
app/schemas/: block.py  card.py  roadmap.py  session.py  session_manager.py  user.py  user_manager.py
app/services/: __init__.py  access.py  base.py  block.py  card.py  roadmap.py  session.py  session_manager.py  user.py  user_manager.py
app/shared/: access.py  generate_id.py
app/utils/: cache.py  generators.py
shared/: generate_id.py
(+49 files in other folders)
